--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>计算机系在线实验教学平台</title>
     <link rel="stylesheet" href="style.prefixed.css">
   </head>
   <body>
