--- a/index.html
+++ b/index.html
@@ -3,35 +3,49 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.prefixed.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="row">
-      <div class="brand">
-        <div class="title">计算机系在线实验教学平台</div>
-        <img class="brand-img" src="assets/brand.png">
+    <div class="title">
+      <div class="title-text">
+        计算机系在线实验教学平台
       </div>
-      <div class="cells">
-        <div class="cell">
-          <a class="cell-inner" href="/jie">
-            <img class="cell-img" src="assets/jielabs.png">
-            <div class="cell-info">
-              <div class="cell-title">JieLabs</div>
-              <div class="cell-hint">杰哥教你 VHDL</div>
-            </div>
-          </a>
+    </div>
+    <a href="https://lab.cs.tsinghua.edu.cn/jie" class="block jielabs">
+      <img src="assets/jielabs.svg">
+      <div class="bottom">
+        <div class="name">
+          JieLabs
         </div>
-
-        <div class="cell">
-          <a class="cell-inner" href="/thinpad">
-            <img class="cell-img" src="assets/jielabs.png">
-            <div class="cell-info">
-              <div class="cell-title">Thinpad Cloud</div>
-              <div class="cell-hint">宇翔哥哥在线发板</div>
-            </div>
-          </a>
+        <div class="hint">
+          杰哥现场模拟 FPGA
         </div>
       </div>
+      <div class="link">https://lab.cs.tsinghua.edu.cn/jie</div>
+    </a>
+    <a href="https://lab.cs.tsinghua.edu.cn/thinpad" class="block thinpad">
+      <img src="assets/thinpad.svg">
+      <div class="bottom">
+        <div class="name">
+          Thinpad Cloud
+        </div>
+        <div class="hint">
+          宇翔哥哥在线发板
+        </div>
+      </div>
+      <div class="link">https://lab.cs.tsinghua.edu.cn/thinpad</div>
+    </a>
+    <div class="block routerlab">
+      <img src="assets/routerlab.svg">
+      <div class="bottom">
+        <div class="name">
+          RouterLab
+        </div>
+        <div class="hint">
+          橙橙快手物理路由
+        </div>
+      </div>
+      <div class="link">Coming soon</div>
     </div>
   </body>
 </html>
