--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img src="assets/thinpad.svg">
       <div class="bottom">
         <div class="name">
-          Thinpad Cloud
+          ThinPAD Cloud
         </div>
         <div class="hint">
           宇翔哥哥在线发板
