RouterLab is now up. Hail jiege and harry!

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="link">https://lab.cs.tsinghua.edu.cn/thinpad</div>
     </a>
-    <div class="block routerlab">
+    <a href="https://lab.cs.tsinghua.edu.cn/router/doc" class="block routerlab">
       <img src="assets/routerlab.svg">
       <div class="bottom">
         <div class="name">
@@ -46,7 +46,7 @@
           橙橙快手物理路由
         </div>
       </div>
-      <div class="link">Coming soon</div>
-    </div>
+      <div class="link">https://lab.cs.tsinghua.edu.cn/router/doc</div>
+    </a>
   </body>
 </html>
